# Sprint

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: screener_config.yaml
data/raw/: analysis.xlsx  balance_sheet.xlsx  cash_flow.xlsx  companies.xlsx  company_overview.xlsx  documents.xlsx  financial_ratios.xlsx  peer_groups.xlsx  profit_and_loss.xlsx  pros_and_cons.xlsx  sectors.xlsx  stock_prices.xlsx
db/: schema.sql  schema_sprint3.sql
notebooks/: exploratory_queries.sql
output/: peer_comparison.xlsx  screener_output.xlsx
scripts/: generate_synthetic_data.py  run_sprint3.py
src/analytics/: __init__.py  peer.py  peer_exporter.py  radar.py
src/api/: main.py
src/dashboard/: app.py
src/etl/: loader.py  normaliser.py  pipeline.py  validator.py
src/screener/: __init__.py  engine.py  exporter.py
tests/analytics/: __init__.py  test_peer.py
tests/etl/: test_normaliser.py  test_validator.py
tests/screener/: __init__.py  test_engine.py
